# grex

./: .gitignore  CMakeLists.txt  README.md
src/: grex.cpp
src/models/: grex_config.cpp  grex_config.h  plan.cpp  plan.h  project.cpp  project.h  rex_config.cpp  rex_config.h  shell_def.cpp  shell_def.h  unit.cpp  unit.h
src/util/: json_helpers.cpp  json_helpers.h  unit_picker.cpp  unit_picker.h  unit_properties_dialog.cpp  unit_properties_dialog.h  unsaved_dialog.cpp  unsaved_dialog.h  var_resolver.cpp  var_resolver.h
src/views/: config_view.cpp  config_view.h  main_window.cpp  main_window.h  plan_view.cpp  plan_view.h  shells_view.cpp  shells_view.h  unit_editor.cpp  unit_editor.h  units_view.cpp  units_view.h
